Closed Bug 1627110 Opened 5 years ago Closed 5 years ago

Crash in [@ nsMsgIncomingServer::GetDeferredServers]

Categories

(Thunderbird :: General, defect)

defect
Not set
blocker

Tracking

(thunderbird75 unaffected, thunderbird76 verified)

VERIFIED FIXED
Thunderbird 76.0
Tracking Status
thunderbird75 --- unaffected
thunderbird76 --- verified

People

(Reporter: carodri2, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression, topcrash-thunderbird)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-a977a83d-fa6b-44e7-816c-c719c0200402.

Top 10 frames of crashing thread:

0 xul.dll static nsMsgIncomingServer::GetDeferredServers comm/mailnews/base/util/nsMsgIncomingServer.cpp:1994
1 xul.dll nsPop3IncomingServer::GetNewMessages comm/mailnews/local/src/nsPop3IncomingServer.cpp:470
2 xul.dll XPTC__InvokebyIndex 
3  @0x1cf6adf100f 
4 xul.dll truncf 
5 xul.dll truncf 
6 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1141
7 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:947
8 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:581
9 xul.dll Interpret js/src/vm/Interpreter.cpp:3040

This started happening since the April 1 2020 update for 76.0a1 64-bit.

Steps to replicate the bug:

  1. Click on a POP inbox.
  2. Click on the "Get new messages" icon in the toolbar.
  3. Program crashes.

Thanks for filing the bug report.

Whatever is causing this, we need to resolve before shipping 76 beta.

Severity: normal → blocker
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(mkmelin+mozilla)
OS: Windows 10 → All
Regressed by: 1614846

From https://searchfox.org/comm-central/diff/24d388390295016c8c3667b7ce46470d462cae0e/mailnews/base/util/nsMsgIncomingServer.cpp#1992

BTW, can there be nulls in the arrays? I see we check that @ line 2016 and wondering if that's really necessary.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Flags: needinfo?(mkmelin+mozilla)
Attachment #9137953 - Flags: review?(benc)
Version: unspecified → 76

(In reply to Magnus Melin [:mkmelin] from comment #4)

From https://searchfox.org/comm-central/diff/24d388390295016c8c3667b7ce46470d462cae0e/mailnews/base/util/nsMsgIncomingServer.cpp#1992

BTW, can there be nulls in the arrays? I see we check that @ line 2016 and wondering if that's really necessary.

I don't think so. There have been places that suggest that there could be (like this case), so I left the checks in. But by now I'm 90% sure there are no nulls allowed in those arrays.

Comment on attachment 9137953 [details] [diff] [review] bug1627110_crash@GetDeferredServers.patch">bug1627110_crash@GetDeferredServers.patch Review of attachment 9137953 [details] [diff] [review]: ----------------------------------------------------------------- Doh. I've no idea how I screwed that one up so blatantly! LGTM :-)
Attachment #9137953 - Flags: review?(benc) → review+

(someone) if the patch lands after today's nightly has built, please trigger a new nightly

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/0e46814e8707
Fix crash [@ nsMsgIncomingServer::GetDeferredServers]. r=benc

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

It will be in today's build, starting in a few minutes.

Hardware: x86_64 → All
Target Milestone: --- → Thunderbird 76.0

Awesome. Thank you for your hard work!

verified - no crashes with today's dailies

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: