Bug 1627110 - Fix crash [@ nsMsgIncomingServer::GetDeferredServers]. r=benc

From https://searchfox.org/comm-central/diff/24d388390295016c8c3667b7ce46470d462cae0e/mailnews/base/util/nsMsgIncomingServer.cpp#1992